--- a/styles/login.css
+++ b/styles/login.css
@@ -10,7 +10,7 @@ body {
     font-weight: 300;
 }
 
-.block{
+.block {
     position: absolute;
     bottom: 0;
     top: 0;
@@ -25,10 +25,20 @@ body {
     justify-content: space-between;
 }
 
-.input_label{
-    align-self: flex-start;
+.label_login {
+    font-family: 'Almarai', sans-serif;
+    font-size: 45px;
+    color: #FFFFFF;
 }
 
+.label_stalks {
+    font-family: 'Abhaya Libre', serif;
+    font-size: 140px;
+    color: #FFFFFF;
+    -webkit-text-stroke: 1px #007A6E;
+}
+
+/*Input*/
 .input_fields {
     display: flex;
     flex-direction: column;
@@ -38,21 +48,11 @@ body {
     margin: 20px 0;
 }
 
-.logowanie{
-    font-family: 'Almarai', sans-serif;
-    font-size: 45px;
-    color: #FFFFFF;
+.input_label {
+    align-self: flex-start;
 }
 
-.stalks{
-    font-family: 'Abhaya Libre', serif;
-    font-size: 140px;
-    color: #FFFFFF;
-    -webkit-text-stroke: 1px #007A6E;
-}
-
-
-.rectangle {
+.input {
     box-sizing: border-box;
     background: #FFFFFF;
     mix-blend-mode: normal;
@@ -61,19 +61,20 @@ body {
     border-radius: 20px;
 }
 
-.rectangle_wh {
+.input_wh {
     width: 700px;
     height: 40px;
 }
 
-.wh{
-    width: 270px;
-    height: 60px;
-}
-
-.zaloguj{
+/*Button*/
+.button_label {
     /*font-family: 'Almarai', sans-serif;*/
     font-family: sans-serif;
     font-size: 32px;
     color: #007A6E;
+}
+
+.button_wh {
+    width: 270px;
+    height: 60px;
 }
