--- a/styles/login.css
+++ b/styles/login.css
@@ -1,13 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300&display=swap');
-
 body {
-    background-color: #00D7C3;
     color: white;
     font-family: 'Almarai', sans-serif;
     font-style: normal;
     font-size: 35px;
     font-weight: 300;
+}
+
+.login-container {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+
+    background-color: #00D7C3;
 }
 
 .block {
