--- a/styles/login.css
+++ b/styles/login.css
@@ -65,6 +65,9 @@ body {
     border: 2px solid #007A6E;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
+
+    font-size: 30px;
+    padding: 0 15px;
 }
 
 .input_wh {
@@ -78,6 +81,7 @@ body {
     font-family: sans-serif;
     font-size: 32px;
     color: #007A6E;
+    cursor: pointer;
 }
 
 .button_wh {
